tests/tooling/fixtures/native/recovery/negative/negative_loop_control_parser_missing_while_rparen.objc3
// Negative fixture: malformed while statement missing ')'.
// Expected diagnostic code(s): O3P109, O3P100.
module NegativeLoopControlParserMissingWhileRParen;

fn main() -> i32 {
  while (1 < 2 {
    return 1;
  }
  return 0;
}
